--- a/css/style-tech.css
+++ b/css/style-tech.css
@@ -453,17 +453,16 @@ input::placeholder {
 	line-height: 18px;
 	text-transform: uppercase;
 	border-radius: 2%;
-	background-color: #000000;
-	opacity: 0.1;
+	background-color: rgba(0, 0, 0, 0.1);
 }
 
 .category a:hover,
 .category a:focus {
-	opacity: 0.2;
+	background-color: rgba(0, 0, 0, 0.2);
 }
 
 .category a:active {
-	opacity: 0.3;
+	background-color: rgba(0, 0, 0, 0.3);
 }
 
 .materials {
@@ -585,7 +584,7 @@ input::placeholder {
 	background-color: #f9f5f0;
 }
 
-.popular h2 {
+.popular h3 {
 	margin-top: 31px;
 	color: #32425c;
 	font-family: Cuprum;
@@ -620,6 +619,10 @@ input::placeholder {
 	border: 1px solid #eaeaea;
 	text-align: center;
 	min-height: 318px;
+}
+
+.goods-list-item:hover .action {
+	display: block;
 }
 
 .first-price {
@@ -690,8 +693,11 @@ input::placeholder {
 } 
 
 .action {
-	display: non;
-
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	box-shadow: 0 10px 25px rgba(41, 52, 73, 0.5);
 }
 
 .buttons {
@@ -702,25 +708,95 @@ input::placeholder {
 }
  
 .button {
-	padding: 10px 0px;
+	padding: 10px 0;
 	text-align: center;
 	box-sizing: border-box;
 	min-width: 135px;
 	margin-bottom: 2px;
-
-
-	color: #ffffff;
 	font-family: Cuprum;
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 18px;
 	text-transform: uppercase;
+}
+
+.to-buy {
+	position: relative;
+	margin-bottom: 7px;
+	color: #ffffff;
 	background-color: #63a63e;
 	box-shadow: inset 0 -3px 0 #367315;
 	border-radius: 3px;
-
+	border: none;
 }
 
+.to-buy::before {
+	content: "";
+	position: absolute;
+	top: 13px;
+	left: 16px;
+	width: 15px;
+	height: 15px;
+	background-image: url("../img/icon-cart.svg");
+  	background-repeat: no-repeat;
+  	background-position: 0 0;
+  	opacity: 0.3;
+}
+
+.to-buy:hover::before,
+.to-buy:focus::before,
+.to-buy:active::before {
+	opacity: 1;
+}
+
+.to-buy:hover,
+.to-buy:focus {
+	background-color: #5fbb2d;
+}
+
+.to-buy:active {
+	background-color: #518534;
+}
+
+.to-bookmarks {
+	color: #32425c;
+	background-color: #ffffff;
+	border: 3px solid #63a63e;
+	padding: 7px 0;
+}
+
+.to-bookmarks:hover,
+.to-bookmarks:focus {
+	border: 3px solid #32425c;
+}
+
+.to-bookmarks:active {
+	border: 3px solid #32425c;
+	opacity: 0.3;
+}
+
+.producers-list {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.producers-item {
+	display: block;
+	margin-bottom: 16px;
+}
+
+.producers-item:hover,
+.producers-item:focus {
+	box-shadow: 0 10px 25px rgba(41, 52, 73, 0.5);
+}
+
+.producers-item:active {
+	box-shadow: 0 4px 10px rgba(41, 52, 73, 0.5);
+	opacity: 0.3;
+}
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
