--- a/css/style-tech.css
+++ b/css/style-tech.css
@@ -421,6 +421,14 @@ input::placeholder {
 	margin-bottom: 20px;
 }
 
+.col-9 {
+	box-sizing: border-box;
+	flex: 0 0 75%;
+	max-width: 75%;
+	padding: 0 10px;
+	margin-bottom: 20px;
+}
+
 .category {
 	background-color: yellow;
 	padding-bottom: 23px;
@@ -1153,6 +1161,7 @@ input[type="radio"].visually-hidden {
 	padding: 0;
 	margin: 0;
 	margin-top: 55px;
+	margin-bottom: 100px;
 	box-shadow: inset 0 -1px 0 #33445a;
 }
 
@@ -1227,5 +1236,84 @@ input[type="radio"].visually-hidden {
 }
 
 .main-tab p {
-	width: 295px;
+	width: 385px;
+}
+
+.main-tab .short {
+	width: 352px;
+}
+
+#tab-1 {
+	background-image: url("../img/tab_1.png");
+	background-repeat: no-repeat;
+	background-position: 99% -214%;
+}
+
+.breadcrumbs a {
+	display: block;
+	vertical-align: middle;
+	color: #000000;
+	font-family: "PT Sans";
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 18px;
+	text-transform: uppercase;
+}
+
+.breadcrumbs-current {
+	color: #000000;
+	font-family: "PT Sans";
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 18px;
+	text-transform: uppercase;
+}
+
+.breadcrumbs {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	margin-top: -38px;
+	margin-bottom: 20px;
+	display: flex;
+	flex-wrap: wrap;
+
+}
+
+.breadcrumbs li:first-child {
+	padding-left: 54px;
+}
+
+.breadcrumbs li:nth-child(2) {
+	padding-left: 39px;
+}
+
+.breadcrumbs li:nth-child(3) {
+	position: relative;
+	padding-left: 43px;
+}
+
+.breadcrumbs li:nth-child(3)::before {
+	position: absolute;
+	content: "";
+	top: 1px;
+	left: 18px;
+	width: 10px;
+	height: 15px;
+	background-image: url("../img/icon-right-small.svg");
+	background-repeat: no-repeat;
+	position: 0 0;
+}
+
+.main-catalog h1 {
+	margin: 0;
+	margin-bottom: 20px;
+	padding: 29px 29px;
+	color: #32425c;
+	font-family: Cuprum;
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 30px;
+	text-transform: uppercase;
+	background-color: #f2f6f8;
 }
