--- a/css/style-tech.css
+++ b/css/style-tech.css
@@ -1281,11 +1281,49 @@ input[type="radio"].visually-hidden {
 }
 
 .breadcrumbs li:first-child {
+	position: relative;
 	padding-left: 54px;
 }
 
+.breadcrumbs li:first-child::before {
+	position: absolute;
+	content: "";
+	top: 1px;
+	left: 28px;
+	width: 10px;
+	height: 15px;
+	background-image: url("../img/icon-right-small.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.breadcrumbs li:first-child::after {
+	position: absolute;
+	content: "";
+	top: 1px;
+	left: -3px;
+	width: 15px;
+	height: 15px;
+	background-image: url("../img/icon-home.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
 .breadcrumbs li:nth-child(2) {
+	position: relative;
 	padding-left: 39px;
+}
+
+.breadcrumbs li:nth-child(2)::before {
+	position: absolute;
+	content: "";
+	top: 1px;
+	left: 18px;
+	width: 10px;
+	height: 15px;
+	background-image: url("../img/icon-right-small.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
 }
 
 .breadcrumbs li:nth-child(3) {
@@ -1302,7 +1340,7 @@ input[type="radio"].visually-hidden {
 	height: 15px;
 	background-image: url("../img/icon-right-small.svg");
 	background-repeat: no-repeat;
-	position: 0 0;
+	background-position: 0 0;
 }
 
 .main-catalog h1 {
@@ -1316,4 +1354,281 @@ input[type="radio"].visually-hidden {
 	line-height: 30px;
 	text-transform: uppercase;
 	background-color: #f2f6f8;
+}
+
+.filter-item {
+  margin: 0;
+  padding: 0;
+  border: none;
+  margin: 50px auto; 
+}
+
+.range-filter {
+  width: 260px;
+  margin-top: 49px;
+}
+
+.filter-item legend {
+  font-size: 18px;
+  line-height: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  margin-bottom: 15px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  background-color: #f7f3ec;
+  border-radius: 5px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background: #00ca74;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 31px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+  -webkit-box-shadow: 0 2px 1px 0 #cfcfcf;
+          box-shadow: 0 2px 1px 0 #cfcfcf;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 18px;
+}
+
+.range-controls .toggle-max {
+  left: 159px;
+}
+
+.price-controls {
+  font-size: 0;
+}
+
+.price-controls label {
+  display: inline-block;
+  width: 50%;
+  font-size: 16px;
+  text-transform: uppercase;
+  vertical-align: center;
+}
+
+.price-controls input {
+  width: 60px;
+  padding: 8px 10px;
+  margin-left: 10px;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 5px;
+  background: #f7f3ec;
+}
+
+.max-price {
+  text-align: right;
+}
+
+.pagination-container {
+
+  margin-bottom: 20px;
+}
+
+.pagination-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.pagination-item {
+  text-align: center;
+  vertical-align: middle;
+
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-left: 10px;
+}
+
+.pagination-item a {
+display: flex;
+width: 38px;
+height: 38px;
+align-items: center;
+justify-content: center;
+  color: #000000;
+font-family: "PT Sans";
+font-size: 13px;
+font-weight: 400;
+line-height: 18px;
+text-transform: uppercase;
+
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 5%;
+  border: 1px solid #e5e5e5;
+}
+
+.pagination-item a:hover,
+.pagination-item a:focus {
+  border-color: #bdc6ca;
+}
+
+.pagination-item a:active {
+  border-color: #ee3643;
+  -webkit-box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+          box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+}
+
+.pagination-item.next a {
+  padding: 16px 80px;
+}
+
+.pagination-item-current {
+	color: #fac9cd;
+	background-color: #ee3643;
+	border: none;
+}
+
+.about-punchers {
+	padding-left: 136px;
+	padding-top: 88px;
+	padding-bottom: 73px;
+	background-color: #f2f6f8;
+}
+
+.about-punchers h2 {
+	margin: 0;
+	font-family: Cuprum;
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 30px;
+	text-transform: uppercase;
+	margin-bottom: 26px;
+}
+
+.about-punchers p {
+	font-family: "PT Sans";
+	font-weight: 400;
+	line-height: 24px;
+}
+
+.filter-group {
+	margin: 0;
+	padding: 0;
+	padding-left: 35px;
+	list-style: none;
+
+}
+
+
+.filter-group label {
+	font-family: "PT Sans";
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 20px;
+	text-transform: uppercase;
+}
+
+.filter-group li {
+	margin-bottom: 16px;
+}
+
+.filter-item .legend {
+	margin-bottom: 25px;
+	font-family: "PT Sans";
+	font-size: 17px;
+	font-weight: 700;
+	line-height: 30px;
+	text-transform: uppercase;
+	letter-spacing: 0.05px;
+}
+
+.modal {
+	position: fixed;
+	background-color: #ffffff;
+}
+
+.modal-login-cart {
+	top: 120px;
+	left: 50%;
+	margin-left: -312px;
+	color: #000000;
+	width: 626px;
+
+	border-top: 5px solid #ee3643;
+	box-shadow: 0 20px 40px rgba(41, 52, 73, 0.75);
+}
+
+.modal-close {
+	position: absolute;
+	top: 8px;
+	right: 9px;
+	width: 21px;
+	height: 21px;
+	font-size: 0;
+	border: none;
+	cursor: pointer;
+	background-color: #ffffff;
+	background-image: url("../img/icon-close.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.modal-buttons-container {
+	background-color: #f1f1f1;
+	padding: 34px 0;
+
+}
+
+.modal-login-cart p {
+	position: relative;
+	margin-top: 67px;
+	margin-left: 182px;
+	margin-bottom: 72px;
+	font-family: Cuprum;
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 30px;
+}
+
+.modal-login-cart p::before {
+	position: absolute;
+	content: "";
+	top: -18px;
+	left: -100px;
+	width: 66px;
+	height: 66px;
+	background-image: url("../img/icon-mark.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.modal-buttons-container button {
+	width: 220px;
+	padding: 8px 0;
 }
