--- a/css/style-tech.css
+++ b/css/style-tech.css
@@ -600,7 +600,7 @@ a {
 	flex-wrap: wrap;
 	align-items: center;
 	margin-bottom: 16px;
-	margin-top: 3px;
+	margin-top: 21px;
 	padding-left: 30px;
 	padding-right: 24px;
 	background-color: #f9f5f0;
@@ -614,6 +614,10 @@ a {
 	font-weight: 400;
 	line-height: 30px;
 	text-transform: uppercase;
+}
+
+.producers h3 {
+	margin-left: -5px;
 }
 
 .popular a {
@@ -1246,6 +1250,10 @@ input[type="radio"].visually-hidden {
 	display: none;
 }
 
+.slides-item {
+	height: 285px;
+}
+
 .producers {
 	margin-bottom: 57px;
 }
@@ -1275,7 +1283,19 @@ input[type="radio"].visually-hidden {
 #tab-1 {
 	background-image: url("../img/tab_1.png");
 	background-repeat: no-repeat;
-	background-position: 99% -214%;
+	background-position: 98% 363%;
+}
+
+#tab-2 {
+	background-image: url("../img/tab_2.png");
+	background-repeat: no-repeat;
+	background-position: 98% 363%;
+}
+
+#tab-3 {
+	background-image: url("../img/tab_3.png");
+	background-repeat: no-repeat;
+	background-position: 98% 363%;
 }
 
 .breadcrumbs a {
@@ -1597,123 +1617,7 @@ text-transform: uppercase;
 	letter-spacing: 0.05px;
 }
 
-.modal {
-	position: fixed;
-	background-color: #ffffff;
-}
 
-.modal-login-cart {
-	display: none;
-	top: 120px;
-	left: 50%;
-	margin-left: -312px;
-	color: #000000;
-	width: 626px;
-	border-top: 5px solid #ee3643;
-	box-shadow: 0 20px 40px rgba(41, 52, 73, 0.75);
-}
-
-.modal-login {
-	display: none;
-	top: 120px;
-	left: 50%;
-	margin-left: -312px;
-	color: #000000;
-
-
-	border-top: 5px solid #ee3643;
-	box-shadow: 0 20px 40px rgba(41, 52, 73, 0.75);
-}
-
-.modal-close {
-	position: absolute;
-	top: 8px;
-	right: 9px;
-	width: 21px;
-	height: 21px;
-	font-size: 0;
-	border: none;
-	cursor: pointer;
-	background-color: #ffffff;
-	background-image: url("../img/icon-close.svg");
-	background-repeat: no-repeat;
-	background-position: 0 0;
-}
-
-.modal-buttons-container {
-	background-color: #f1f1f1;
-	padding: 37px 80px;
-}
-
-.modal-button-container {
-	background-color: #f1f1f1;
-	padding: 37px 80px;
-}
-
-.modal-login-cart p {
-	position: relative;
-	margin-top: 67px;
-	margin-left: 182px;
-	margin-bottom: 71px;
-	font-family: Cuprum;
-	font-size: 30px;
-	font-weight: 400;
-	line-height: 30px;
-}
-
-.modal-login-cart p::before {
-	position: absolute;
-	content: "";
-	top: -18px;
-	left: -100px;
-	width: 66px;
-	height: 66px;
-	background-image: url("../img/icon-mark.svg");
-	background-repeat: no-repeat;
-	background-position: 0 0;
-}
-
-.modal-buttons-container button {
-	width: 220px;
-	padding: 10px 0;
-	border: none;
-	border-radius: 3%;
-	color: #000000;
-	font-family: Cuprum;
-	font-size: 14px;
-	font-weight: 700;
-	line-height: 18px;
-	text-transform: uppercase;
-	background-color: #ffffff;
-}
-
-.modal-buttons-container .to-order {
-	margin-right: 20px;
-	color: #ffffff;
-	background-color: #ee3643;
-	font-weight: 400;
-}
-
-.modal-description {
-  margin: 0;
-  margin-bottom: 10px;
-}
-
-.message-form {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-.modal-description {
-    width: 360px;
-    margin-bottom: 21px;
-}
-
-.letter-text {
-    width: 100%;
-    margin-bottom: 40px;
-}
 
 .log-out-link {
 	margin-top: 3px;
@@ -1911,4 +1815,190 @@ text-transform: uppercase;
 .filter-item:nth-child(2) {
 	margin-top: 53px;
 	margin-bottom: -40px;
+}
+
+.product {
+	margin-bottom: 22px;
+}
+
+.product .row-8 {
+	background-image: 
+}
+
+
+.message-form textarea,
+.message-form input { 
+	color: #a9a9a9;
+	font-family: "PT Sans";
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 18px;
+	border: 2px solid #dee3e4;
+}
+
+
+.message-form textarea {
+	width: 425px;
+	
+	padding: 13px 16px;
+	min-height: 105px;
+	outline: none;
+}
+
+.message-form input {
+	padding: 7px 13px;
+	width: 190px;
+
+}
+
+.message-form label {
+	color: #000000;
+	font-family: Cuprum;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 18px;
+  margin-bottom: 20px;
+}
+
+.modal-top-container {
+	padding: 45px 80px;
+	padding-bottom: 0;
+}
+
+.modal-description {
+    width: 220px;
+    margin-bottom: 21px;
+}
+
+
+.modal {
+	position: fixed;
+	background-color: #ffffff;
+}
+
+.modal-login-cart {
+	display: none;
+	top: 120px;
+	left: 50%;
+	margin-left: -312px;
+	color: #000000;
+	width: 626px;
+	border-top: 5px solid #ee3643;
+	box-shadow: 0 20px 40px rgba(41, 52, 73, 0.75);
+}
+
+.modal-login {
+	display: none;
+	width: 620px;
+	top: 120px;
+	left: 50%;
+	margin-left: -312px;
+	color: #000000;
+	border-top: 5px solid #ee3643;
+	box-shadow: 0 20px 40px rgba(41, 52, 73, 0.75);
+}
+
+.modal-close {
+	position: absolute;
+	top: 8px;
+	right: 9px;
+	width: 21px;
+	height: 21px;
+	font-size: 0;
+	border: none;
+	cursor: pointer;
+	background-color: #ffffff;
+	background-image: url("../img/icon-close.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.modal-buttons-container {
+	background-color: #f1f1f1;
+	padding: 37px 80px;
+}
+
+.modal-button-container {
+	background-color: #f1f1f1;
+	text-align: center;
+	padding: 36px 0;
+
+}
+
+.modal-login-cart p {
+	position: relative;
+	margin-top: 67px;
+	margin-left: 182px;
+	margin-bottom: 71px;
+	font-family: Cuprum;
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 30px;
+}
+
+.modal-login-cart p::before {
+	position: absolute;
+	content: "";
+	top: -18px;
+	left: -100px;
+	width: 66px;
+	height: 66px;
+	background-image: url("../img/icon-mark.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.modal-buttons-container button {
+	width: 220px;
+	padding: 10px 0;
+	border: none;
+	border-radius: 3%;
+	color: #000000;
+	font-family: Cuprum;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 18px;
+	text-transform: uppercase;
+	background-color: #ffffff;
+}
+
+.modal-buttons-container .to-order {
+	margin-right: 20px;
+	color: #ffffff;
+	background-color: #ee3643;
+	font-weight: 400;
+}
+
+.modal-description {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.modal-top-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.modap-top-container p {
+	margin-top:;
+}
+
+.modal-description {
+    width: 220px;
+    margin-bottom: 21px;
+}
+
+.modal-button {
+	width: 460px;
+	padding: 10px 0;
+	border: none;
+	border-radius: 3%;
+	color: #ffffff;
+	font-family: Cuprum;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 18px;
+	text-transform: uppercase;
+	background-color: #ee3643;
 }
